--- a/index.html
+++ b/index.html
@@ -20,9 +20,103 @@
         <form action="#"></form>
       </div>
       <div class="header-right">
-        
+        <div class="header-burger">
+          <span></span>
+        </div>
+        <nav class="burger-menu">
+          <ul class="burger-menu-category">
+            <li class="burger-menu-category-item">
+              <a class="burger-menu-category-link" href="#">Man</a>
+              <ul class="burger-menu-subcategory">
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Accessories</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Bags</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Denim</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">T-Shirts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="burger-menu-category-item">
+              <a class="burger-menu-category-link" href="#">Woman</a>
+              <ul class="burger-menu-subcategory">
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Accessories</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Jackets & Coats</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Polos</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">T-Shirts</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Shirts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="burger-menu-category-item">
+              <a class="burger-menu-category-link" href="#">Kids</a>
+              <ul class="burger-menu-subcategory">
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Accessories</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Jackets & Coats</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Polos</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">T-Shirts</a>
+                </li>
+                <li class="burger-menu-subcategory-item">
+                  <a href="#" class="burger-menu-subcategory-link">Shirts</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          
+        </nav>
+        <ul class="user-nav">
+          <li class="user-item">
+            <a href="#" class="user-link">
+              <img src="images/user-icon.svg" alt="">
+            </a>
+          </li>
+          <li class="user-item">
+            <a href="#" class="user-link">
+              <img src="images/cart.svg" alt="cart">
+              <span></span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </header>
+  <section class="banner-section">
+    <div class="container">
+      <div class="banner-inner">
+        <div class="banner-left">
+          <img src="images/banner-img.png" alt="banner">
+        </div>
+        <div class="banner-right">
+          <div class="pink-brick"></div>
+          <div class="banner-text">
+            <p class="text-bold">THE BRAND</p>
+             <p>OF LUXERIOUS <span class="text-pink">FASHION</span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="js/main.js"></script>
 </body>
 </html>
