--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
       </div>
     </div>
   </section>
+  <section class="offer">
+    <div class="container">
+      <div class="offer-inner">
+        <div class="offer-item">
+          <img src="images/offer-1.png" alt="">
+          <div class="offer-text"></div>
+        </div>
+      </div>
+
+    </div>
+  </section>
   <script src="js/main.js"></script>
 </body>
 </html>
