cart-page  completed

--- a/cart.html
+++ b/cart.html
@@ -128,10 +128,10 @@
             </nav>
         </div>
     </header>
-    <section class="category">
+    <section class="category shopping-cart">
         <div class="container">
             <div class="category__inner">
-                <h2 class="category__title">SHOPPING CART</h2>
+                <h2 class="category__title shopping-cart__title">SHOPPING CART</h2>
             </div>
         </div>
     </section>
@@ -174,9 +174,9 @@
                 </div>
                 <div class="basket__right">
                     <div class="delivery">
-                        <div class="delivery__title">SHIPPING ADRESS</div>
                         <form action="" class="delivery__form">
                             <div class="delivery__address">
+                                <div class="delivery__title">SHIPPING ADRESS</div>
                                 <input class="field field_text" type="text" placeholder="Bangladesh">
                                 <input class="field field_text" type="text" placeholder="State">
                                 <input class="field field_text" type="text" placeholder="Postcode / Zip">
