--- a/cart.html
+++ b/cart.html
@@ -145,11 +145,39 @@
                                 <img src="images/cart-item.jpg" alt="" class="basket__img">
                             </div>
                             <div class="basket__item-info">
-                                <h3 class="basket__item-title">MANGO PEOPLE T-SHIRT</h3>
+                                <div class="basket__item-title">
+                                    <p class="designer">MANGO PEOPLE</p> T-SHIRT</div>
                                 <dl class="basket-description__list">
                                     <div class="basket-description__row">
                                         <dt>Price:</dt>
-                                        <dd>$300</dd>
+                                        <dd class="basket__item-price">$300</dd>
+                                    </div>
+                                    <div class="basket-description__row">
+                                        <dt>Color:</dt>
+                                        <dd>Red</dd>
+                                    </div>
+                                    <div class="basket-description__row">
+                                        <dt>Size:</dt>
+                                        <dd>XL</dd>
+                                    </div>
+                                    <div class="basket-description__row">
+                                        <dt>Quantity:</dt>
+                                        <dd>2</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                        </div>
+                        <div class="basket__item">
+                            <div class="basket__img-container">
+                                <img src="images/cart-item-2.jpg" alt="" class="basket__img">
+                            </div>
+                            <div class="basket__item-info">
+                                <div class="basket__item-title">
+                                    <p class="designer">MANGO PEOPLE</p> T-SHIRT</div>
+                                <dl class="basket-description__list">
+                                    <div class="basket-description__row">
+                                        <dt>Price:</dt>
+                                        <dd class="basket__item-price">$300</dd>
                                     </div>
                                     <div class="basket-description__row">
                                         <dt>Color:</dt>
