added registration page

--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                         <div class="header-icons__item">
-                            <a class="profile" href="#"></a>
+                            <a class="profile" href="registration.html"></a>
                         </div>
                         <div class="header-icons__item cart-block">
                             <a class="cart" href="cart.html">
