--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             </div>
                         </div>
                         <div class="header-icons__item">
-                            <a class="profile" href="#"></a>
+                            <a class="profile" href="registration.html"></a>
                         </div>
                         <div class="header-icons__item cart-block">
                             <a class="cart" href="cart.html"></a>
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="products__item">
-                    <a href="#" class="products__link">
+                    <a href="product.html" class="products__link">
                         <img src="images/product-2.jpg" alt="" class="products__img">
                         <div class="products__info">
                             <div class="products__heading">ELLERY X M'O CAPSULE</div>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <a href="#" class="products__link">
+                    <a href="product.html" class="products__link">
                         <img src="images/product-3.jpg" alt="" class="products__img">
                         <div class="products__info">
                             <div class="products__heading">ELLERY X M'O CAPSULE</div>
@@ -230,7 +230,7 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <a href="#" class="products__link">
+                    <a href="product.html" class="products__link">
                         <img src="images/product-5.jpg" alt="" class="products__img">
                         <div class="products__info">
                             <div class="products__heading">ELLERY X M'O CAPSULE</div>
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <div class="products__item">
-                    <a href="#" class="products__link">
+                    <a href="product.html" class="products__link">
                         <img src="images/product-6.jpg" alt="" class="products__img">
                         <div class="products__info">
                             <div class="products__heading">ELLERY X M'O CAPSULE</div>
