--- a/registration.html
+++ b/registration.html
@@ -9,9 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1a1f78895e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/styles.css">
-    <title>Страница товара</title>
+    <title>Корзина</title>
 </head>
 
 <body>
@@ -42,8 +41,18 @@
                             <a class="profile" href="registration.html"></a>
                         </div>
                         <div class="header-icons__item cart-block">
-                            <a class="cart" href="#"></a>
-                            <p class="cart-count">2</p>
+                            <a class="cart" href="cart.html">
+                                <p class="cart-count">5</p>
+                            </a>
+                            <div class="cart__inner">
+
+                                <div>Название</div>
+                                <div>Количество</div>
+                                <div>Цена за шт.</div>
+                                <div>Итого</div>
+                                <hr>
+                                <div>Сумма покупки</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -119,137 +128,62 @@
             </nav>
         </div>
     </header>
-    <section class="category">
+    <section class="category registration-header">
         <div class="container">
             <div class="category__inner">
-                <h2 class="category__title">New Arrivals</h2>
-                <nav aria-label="Breadcrumb" class="breadcrumb">
-                    <ul class="breadcrumb__list">
-                        <li>
-                            <a href="#" class="breadcrumb__link">HOME</a>
-                        </li>
-                        <li>
-                            <a href="#" class="breadcrumb__link">MEN</a>
-                        </li>
-                        <li class="active">
-                            <span aria-current="page">NEW ARRIVALS</span>
-                        </li>
-                    </ul>
-                </nav>
+                <h2 class="category__title registration__title">REGISTRATION</h2>
             </div>
         </div>
     </section>
-    <section class="product">
-        <div class="product__slider-container">
-            <div class="swiper-container">
-                <div class="swiper-wrapper product__slider">
-                    <!-- Slides -->
-                    <div class="swiper-slide product__slide">
-                        <div class="product__img-container">
-                            <img src="images/slide-1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="swiper-slide product__slide">
-                        <div class="product__img-container">
-                            <img src="images/slide-1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="swiper-slide product__slide">
-                        <div class="product__img-container">
-                            <img src="images/slide-1.png" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
-        </div>
-        <div class="product__info">
-            <div class="container">
-                <div class="product__content">
-                    <div class="product__content-container">
-                        <div class="product__collection">women collection</div>
-                        <h4 class="product__title">MOSCHINO CHEAP AND CHIC</h4>
-                        <div class="product__description-container">
-                            <p class="product__description">Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional
-                                portals. </p>
-                        </div>
-                        <span class="product__price">$561</span>
-                        <div class="line"></div>
-                        <form action="" class="product__filters">
-                            <div class="product__filters-container">
-                                <select name="" id="color" class="chooser color-chooser">
-                                    <option value="">choose color</option>
-                                    <option value="black">Black</option>
-                                    <option value="white">White</option>
-                                    <option value="red">Red</option>
-                                </select>
-                                <select name="" id="color" class="chooser size-chooser">
-                                    <option value="">choose size</option>
-                                    <option value="xs">xs</option>
-                                    <option value="sm">sm</option>
-                                    <option value="xl">xl</option>
-                                </select>
-                                <select name="" id="color" class="chooser quantity-chooser">
-                                    <option value="">quantity</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                </select>
-                            </div>
-                            <button type="submit" class="product__btn">Add to Cart</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="products-more">
+    <section class="registration">
         <div class="container">
-            <div class="products products-more__inner">
-                <div class="products__item">
-                    <a href="product.html" class="products__link">
-                        <div class="products__img">
-                            <img src="images/product-4.jpg" alt="">
+            <div class="registration__inner">
+                <div class="registration__left">
+                    <form action="post" class="registration__form">
+                        <div class="form__personal-data">
+                            <p>Your Name</p>
+                            <label for="username" class="visually-hidden">Name</label>
+                            <input type="text" id="username" placeholder="First Name" class="field">
+                            <label for="lastname" class="visually-hidden">Last name</label>
+                            <input type="text" id="lastname" placeholder="Last Name" class="field">
+                            <div class="form__sex-block">
+                                <label class="radio option">
+                                    <input class="radio__input" type="radio" name="sex" id="male">
+                                    <span class="radio__box"></span>
+                                    Male
+                                </label>
+                                <label class="radio option">
+                                    <input class="radio__input" type="radio" name="sex" id="female">
+                                    <span class="radio__box"></span>
+                                    Female
+                                </label>
+                            </div>
+
                         </div>
-                        <div class="products__info">
-                            <div class="products__heading">ELLERY X M'O CAPSULE</div>
-                            <div class="products__descr">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                            <div class="products__price">$52.00</div>
+                        <div class="form__login-details">
+                            <p>Login details</p>
+                            <label for="userMail" class="visually-hidden">Email</label>
+                            <input type="text" id="userMail" class="field" placeholder="Email">
+                            <label for="userPassword" class="visually-hidden">Password</label>
+                            <input type="text" id="userPassword" class="field form__password-field" placeholder="Password">
+                            <p class="form__password-text">Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters</p>
+                            <button class="registration__btn" type="submit">
+                                <span>JOIN NOW</span>
+                            </button>
                         </div>
-                    </a>
-                    <div class="add-to-cart">
-                        <a href="#" class="add-btn">Add to Cart</a>
-                    </div>
+                    </form>
                 </div>
-                <div class="products__item">
-                    <a href="product.html" class="products__link">
-                        <div class="products__img">
-                            <img src="images/product-3.jpg" alt="">
-                        </div>
-                        <div class="products__info">
-                            <div class="products__heading">ELLERY X M'O CAPSULE</div>
-                            <div class="products__descr">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                            <div class="products__price">$52.00</div>
-                        </div>
-                    </a>
-                    <div class="add-to-cart">
-                        <a href="#" class="add-btn">Add to Cart</a>
-                    </div>
-                </div>
-                <div class="products__item">
-                    <a href="product.html" class="products__link">
-                        <div class="products__img">
-                            <img src="images/product-6.jpg" alt="">
-                        </div>
-                        <div class="products__info">
-                            <div class="products__heading">ELLERY X M'O CAPSULE</div>
-                            <div class="products__descr">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                            <div class="products__price">$52.00</div>
-                        </div>
-                    </a>
-                    <div class="add-to-cart">
-                        <a href="#" class="add-btn">Add to Cart</a>
+                <div class="registration__right">
+                    <div class="registration__info">
+                        <div class="registration__info-title">LOYALTY HAS ITS PERKS</div>
+                        <p>Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as soon as you join:</p>
+                        <ul class="registration__info-list">
+                            <li>15% off welcome offer</li>
+                            <li>Free shipping, returns and exchanges on all orders</li>
+                            <li>$10 off a purchase on your birthday</li>
+                            <li>Early access to products</li>
+                            <li>Exclusive offers & rewards</li>
+                        </ul>
                     </div>
                 </div>
             </div>
