--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="search">
                         <button class="search__icon"></button>
-                        <form action="" class="search-form">
+                        <form action="#" class="search-form">
                             <input type="text">
                         </form>
                     </div>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="basket__right">
                     <div class="delivery">
-                        <form action="" class="delivery__form">
+                        <form action="#" class="delivery__form">
                             <div class="delivery__address">
                                 <div class="delivery__title">SHIPPING ADRESS</div>
                                 <input class="field field_text" type="text" placeholder="Bangladesh">
@@ -253,7 +253,7 @@
                 <div class="subscribe__right">
                     <h4 class="subscribe__title">SUBSCRIBE</h4>
                     <p class="subscribe__text">FOR OUR NEWLETTER AND PROMOTION</p>
-                    <form action="" class="subscribe__form">
+                    <form action="#" class="subscribe__form">
                         <div class="subscribe__form-container">
                             <input class="subscribe__field" type="text" placeholder="Enter your email" required>
                             <input class="subscribe__btn" type="submit" value="Subscribe">
