--- a/catalog.html
+++ b/catalog.html
@@ -229,7 +229,7 @@
                     <div class="dropdown size">
                         <span class="dropdown__title">size</span>
                         <!-- <div class="dropdown__content">
-                            <form action="">
+                            <form action="#">
                                 <div class="dropdown__field">
                                     <label for=""></label>
                                     <input type="checkbox" name="" id="">
@@ -480,7 +480,7 @@
                 <div class="subscribe__right">
                     <h4 class="subscribe__title">SUBSCRIBE</h4>
                     <p class="subscribe__text">FOR OUR NEWLETTER AND PROMOTION</p>
-                    <form action="" class="subscribe__form">
+                    <form action="#" class="subscribe__form">
                         <div class="subscribe__form-container">
                             <input class="subscribe__field" type="text" placeholder="Enter your email" required>
                             <input class="subscribe__btn" type="submit" value="Subscribe">
