--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="search">
                         <button class="search__icon"></button>
-                        <form action="" class="search-form">
+                        <form action="#" class="search-form">
                             <input type="text">
                         </form>
                     </div>
@@ -176,7 +176,7 @@
                         </div>
                         <span class="product__price">$561</span>
                         <div class="line"></div>
-                        <form action="" class="product__filters">
+                        <form action="#" class="product__filters">
                             <div class="product__filters-container">
                                 <select name="" id="color" class="chooser color-chooser">
                                     <option value="">choose color</option>
@@ -269,7 +269,7 @@
                 <div class="subscribe__right">
                     <h4 class="subscribe__title">SUBSCRIBE</h4>
                     <p class="subscribe__text">FOR OUR NEWLETTER AND PROMOTION</p>
-                    <form action="" class="subscribe__form">
+                    <form action="#" class="subscribe__form">
                         <div class="subscribe__form-container">
                             <input class="subscribe__field" type="text" placeholder="Enter your email" required>
                             <input class="subscribe__btn" type="submit" value="Subscribe">
