--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="search">
                         <button class="search__icon"></button>
-                        <form action="" class="search-form">
+                        <form action="#" class="search-form">
                             <input type="text">
                         </form>
                     </div>
@@ -315,7 +315,7 @@
                 <div class="subscribe__right">
                     <h4 class="subscribe__title">SUBSCRIBE</h4>
                     <p class="subscribe__text">FOR OUR NEWLETTER AND PROMOTION</p>
-                    <form action="" class="subscribe__form">
+                    <form action="#" class="subscribe__form">
                         <div class="subscribe__form-container">
                             <input class="subscribe__field" type="text" placeholder="Enter your email" required>
                             <input class="subscribe__btn" type="submit" value="Subscribe">
